@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2010-03-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/{command.c, display.c}: Make sure that 'animate',
+        'display', and 'identify' report any error only once, and then
+        proceed to the next file name rather than quitting.  Problem was
+        reported by Patrick Welche.
+
+</UL>
+<p>
 2010-03-03  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
